fix a lot